Adjust surefire argLine